--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
           </  p  >
     </  rodap é >
     
-        <  script   src = " codigo.js " >   </ script>
+        <  script   src =   " https://giovannict11.github.io/JAVASCRIPT/codigo.js "> </ script>
 </ body>
 </ html>
