--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <  link   href = " https://giovannict11.github.io/JAVASCRIPT/estilo.css "  rel = " stylesheet ">
+    <  link   href = " https://giovannict11.github.io/JAVASCRIPT/estilo.css "  rel = " stylesheet "/>
     
 </head>
 <body>
